Edit configurations to match the new way of configuring AtomGenerate class

--- a/inject-layer/src/main/resources/atom-config.properties
+++ b/inject-layer/src/main/resources/atom-config.properties
@@ -4,17 +4,17 @@
 
 ## ======== Time related properties ========
 # Number of days in the simulation
-simul.days=7
+simul.days=1
 # Number of Ticks before the beginning of the day (keep to 0 in order to work with the AtomReplay class)
 simul.tick.opening=0
 # Number of Ticks during the day
-simul.tick.continuous=10000
+simul.tick.continuous=1000
 # Number of Ticks after the end of the day during the closing (keep to 0 in order to work with the AtomReplay class)
 simul.tick.closing=0
 # The timezone for the simulation
 simul.time.timezone=Europe/Paris
 # If true, the start date will be the current date minus 6 days, otherwise the value from "simul.time.startdate" propertie is applied
-simul.time.startdate.last.seven.days=true
+simul.time.startdate.now=true
 # The start date of the simulation yyyy-MM-dd
 simul.time.startdate=2017-02-03
 # The market's opening hour
@@ -29,15 +29,6 @@ simul.time.time.format=HH:mm:ss
 simul.time.timestamp.enabled=true
 # Whether or not add a timestamp with a date time format to the simulation logs
 simul.time.timestamp.human.readable=true
-# Whether or not the simulation will produce out of order messages
-simul.time.outOfOrder.enabled=false
-# Coefficient by which multiply the time per tick when the logger chose to send out of order logs or not
-#   Example : if equal one, no out of order, if equal 3, logs from the two previous ticks can appear in the current tick
-simul.time.outOfOrder.coefficient=3
-# Maximum delay that the multiplication of the time per tick and the out of order coefficient can't exceed (in seconds)
-simul.time.outOfOrder.maxDelayInSeconds=3600
-# Percentage of logs out of order
-simul.time.outOfOrder.percentage=60
 
 ## ======== Agents properties ========
 # Used to choose between anonymous agents or agents with names for the simulation. List of named agents is defined in the "symbols-agents-basic" property
@@ -71,15 +62,3 @@ symbols.orderbooks.DOW30=MMM,AXP,AAPL,BA,CAT,CVX,CSCO,KO,DIS,DD,XOM,GE,GS,HD,IBM
 atom.marketmaker=false
 # Number of MarketMakers if "atom-marketmaker" property is set to true
 atom.marketmaker.quantity=10
-
-# ==================================================
-# ================= OUTPUT properties ===============
-# ==================================================
-
-# Boolean value to whether or not enable Kafka output for the simulation
-simul.output.kafka=false
-# Boolean value to whether or not enable File output for the simulation
-# and the file to write the simulation logs to
-simul.output.file=true
-#simul.output.file.path=/Users/raphael/Desktop/atom/atom-simul.out
-simul.output.file.path=/Users/raphael/Desktop/atom/atom-replay-source.in
