--- a/stream-layer/src/main/resources/streaming-jobs-configs/price-mean-reference.properties
+++ b/stream-layer/src/main/resources/streaming-jobs-configs/price-mean-reference.properties
@@ -1,6 +1,7 @@
 application.processor.name=PriceMeanReference
 application.source.type=kafka
 application.sink.type=elasticsearch
+#application.sink.type=file
 
 
 source.kafka.topic=atom-raw-data-without-delay
@@ -14,3 +15,8 @@ sink.elasticsearch.host.adress=127.0.0.1
 sink.elasticsearch.host.port=9300
 sink.elasticsearch.index=price-mean
 sink.elasticsearch.discriminant=reference
+
+
+sink.file.path=/Users/raphael/Desktop/atom/
+sink.file.name=price-mean-reference-1
+sink.file.extension=out
