--- a/inject-layer/pom.xml
+++ b/inject-layer/pom.xml
@@ -18,18 +18,20 @@
     </properties>
     <dependencies>
 
-        <dependency>
-            <groupId>atom</groupId>
-            <artifactId>atom</artifactId>
-            <version>1.0</version>
-        </dependency>
+    	 <dependency>
+	        <groupId>atom</groupId>
+	        <artifactId>atom</artifactId>
+	        <version>1.0</version>
+	        <scope>system</scope>
+	        <systemPath>${project.basedir}/atom.jar</systemPath>
+		</dependency>
 
         <!-- LOGGING -->
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-api</artifactId>
         </dependency>
-
+ 
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
