--- a/inject-layer/src/main/resources/config.properties
+++ b/inject-layer/src/main/resources/config.properties
@@ -1,8 +1,8 @@
-simul.days=2
+simul.days=20
 simul.tick.opening=1
-simul.tick.continuous=100
+simul.tick.continuous=1000
 simul.tick.closing=1
-simul.time.startdate=09/13/2015
+simul.time.startdate=16/05/2018
 simul.time.openhour=9:00
 simul.time.closehour=17:30
 simul.output.kafka=true
@@ -14,12 +14,12 @@ simul.agent.maxquantity=50
 symbols.orderbooks.DOW30=MMM,AXP,AAPL,BA,CAT,CVX,CSCO,KO,DIS,DD,XOM,GE,GS,HD,IBM,INTC,JNJ,JPM,MCD,MRK,MSFT,NKE,PFE,PG,TRV,UTX,UNH,VZ,V,WMT
 symbols.orderbooks.test=TEST1,TEST2,TEST3
 symbols.orderbooks.test2=AAPL,GOOG
-symbols.agents.basic=Paul,Anna,Nicolas,Gabriel,Pauline,Beatrice,Frank,Laurie,Adele,Alain
+symbols.agents.basic=Paul,Anna,Nicolas,Gabriel,Pauline,Beatrice,Frank,Laurie,Adele,Alain,Denise,Khalil,Youness,Yassine,Molka,Marvin,Chris,Bogar,Linh,Mohamed,Ahmed,Mehdi,Slim,Julien,Thomas,Ronan,Atef
 atom.orderbooks=DOW30
 atom.orderbooks.random=10
-atom.agents=random
+atom.agents=basic
 atom.agents.random=100
 atom.marketmaker=false
 atom.marketmaker.quantity=10
-kafka.topic=atom
+kafka.topic=Test
 bootstrap.kafka.servers=localhost:9092
