--- a/inject-layer/src/main/resources/config.properties
+++ b/inject-layer/src/main/resources/config.properties
@@ -21,5 +21,5 @@ atom.agents=basic
 atom.agents.random=100
 atom.marketmaker=false
 atom.marketmaker.quantity=10
-kafka.topic=Test
+kafka.topic=TopicSAAS
 bootstrap.kafka.servers=localhost:9092
