--- a/stream-layer2/pom.xml
+++ b/stream-layer2/pom.xml
@@ -87,19 +87,14 @@ under the License.
             <version>1.4.2</version>
         </dependency>
         <dependency>
-            <groupId>com.data-artisans</groupId>
-            <artifactId>flink-training-exercises</artifactId>
-            <version>0.15.2</version>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-table_2.11</artifactId>
+            <version>1.4.2</version>
         </dependency>
         <dependency>
-            <groupId>com.data-artisans</groupId>
-            <artifactId>flink-training-exercises</artifactId>
-            <version>0.15.2</version>
-        </dependency>
-        <dependency>
-            <groupId>com.data-artisans</groupId>
-            <artifactId>flink-training-exercises</artifactId>
-            <version>0.15.2</version>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-streaming-scala_2.11</artifactId>
+            <version>1.4.2</version>
         </dependency>
 
     </dependencies>
