Update pipelineJenkins: Specify the pipeline for ./inject-layer/ and ./stream-layer/ only. Add Archival step. Load the main class AgentConsumer in the pom.xml

--- a/stream-layer2/pom.xml
+++ b/stream-layer2/pom.xml
@@ -151,7 +151,7 @@ under the License.
                             </filters>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>org.apache.flink.quickstart.StreamingJob</mainClass>
+                                    <mainClass>com.finaxys.flink.flink.AgentConsumer</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
