--- a/stream-layer2/pom.xml
+++ b/stream-layer2/pom.xml
@@ -151,7 +151,7 @@ under the License.
                             </filters>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>com.finaxys.flink.AgentConsumer</mainClass>
+                                    <mainClass>com.finaxys.flink.processor.PriceConsumer</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
