--- a/stream-layer2/pom.xml
+++ b/stream-layer2/pom.xml
@@ -96,6 +96,12 @@ under the License.
             <artifactId>flink-streaming-scala_2.11</artifactId>
             <version>1.4.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.1.0</version>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
 
