--- a/auto_SAAS/install/roles/metricbeat/tasks/main.yml
+++ b/auto_SAAS/install/roles/metricbeat/tasks/main.yml
@@ -7,7 +7,7 @@
 
 - name: Install Metricbeat with apt
   apt:
-   name: metricbeat
+   name: metricbeat={{ role_metricbeat_version }}
    update_cache: yes
     
 # Starting Metricbeat
