--- a/auto_SAAS/install/group_vars/all.yml
+++ b/auto_SAAS/install/group_vars/all.yml
@@ -7,7 +7,7 @@ role_install_flink: true
 role_install_elasticsearch: true
 role_install_kibana: true
 role_install_logstash: true
-role_install_metricbeat: false
+role_install_metricbeat: true
 
 role_install_zookeeper: true
 
@@ -26,9 +26,10 @@ flink_path: /usr/local/flink-1.4.2
 flink_link: /usr/local/flink
 
 ## Elasticsearch
-role_elasticsearch_version: 6.3.0
+role_elasticsearch_version: 6
+role_elasticsearch_full_version: 6.3.0
 role_elasticsearch_host: 0.0.0.0
-role_elastic_search_port: 9200
+role_elasticsearch_port: 9200
 
 ## Java
 role_java_version: 8
@@ -37,20 +38,24 @@ role_java_build_custom: 11
 
 ## Kafka
 role_kafka_version: 0.10.2.1
-role_kafka_scala_severion: 2.11
-role_zookeeper_version: 3.4.12
+role_kafka_scala_severion: 2.10
+role_kafka_hosts: "0.0.0.0"
+role_kafka_zookeeper_hosts: "0.0.0.0"
 
 ## Kibana
 role_kibana_version: 6.3.0
-role_kibana_server_host: 
+role_kibana_server_host: 0.0.0.0
 role_kibana_server_port: 5601
 role_kibana_elasticsearch_url: http://localhost:9200
 
 ## Logstash
 role_logstash_version: 6.3.0
-role_logstash_src: ../roles/logstash/templates/apache-01.conf
+role_logstash_src: ../install/roles/logstash/templates/apache-01.conf
 role_logstash_dest: /etc/logstash/conf.d/apache-01.conf
 role_logstash_mode: 0644
 
 ## Metricbeat
 role_metricbeat_version: 6.3.0
+
+## Zookeeper
+role_zookeeper_version: 3.4.12
