--- a/stream-layer2/pom.xml
+++ b/stream-layer2/pom.xml
@@ -169,7 +169,7 @@ under the License.
                             </filters>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>com.finaxys.flink.processor.AgentConsumer</mainClass>
+                                    <mainClass>com.finaxys.flink.processor.OrderConsumer</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
