--- a/ansible-dcos/group_vars/all.yaml
+++ b/ansible-dcos/group_vars/all.yaml
@@ -1,6 +1,5 @@
 ---
-# Install latest operating system updates
-os_system_updates: False
+### Custom configurations for Streaming As A Service ###
 
 # Roles installation
 role_install_flink: true
@@ -8,6 +7,43 @@ role_install_kafka: true
 role_install_elastic: true
 role_install_kibana: true
 role_install_logstash: true
+
+# Kafka
+kafka_version:  2.3.0-1.1.0
+kafka_options_brokers_count: 1
+kafka_options_brokers_cpus: 1
+kafka_options_brokers_mem: 512
+kafka_options_brokers_kafka_offsets: 1
+
+# Elastic
+elastic_version: 2.4.0-5.6.9
+elastic_options_master_nodes_cpus: 0.5
+elastic_options_master_nodes_mem: 512
+elastic_options_master_nodes_heap_size: 256
+elastic_options_data_nodes_count: 1
+elastic_options_data_nodes_cpus: 0.5
+elastic_options_data_nodes_mem: 512
+elastic_options_data_nodes_heap_size: 256
+elastic_options_coordinator_nodes_count: 1
+elastic_options_coordinator_nodes_cpus: 0.5
+elastic_options_coordinator_nodes_mem: 512
+elastic_options_coordinator_nodes_heap_size: 256
+
+# Logstash
+logstash_version: 2.3.4
+logstash_options_logstash_config_string: 'input { kafka { topic_id => "ResultOrderByDir" zk_connect => "master.mesos:2181/dcos-service-kafka" } } output { elasticsearch { hosts =>  "data.elastic.l4lb.thisdcos.directory:9200" index => "streaming_index_kibana"} }'
+logstash_options_logstash_instances: '1'
+
+# Kibana
+kibana_version: 2.4.0-5.6.9
+kibana_options_kibana_elasticsearch_url:  'http://coordinator.elastic.l4lb.thisdcos.directory:9200'
+kibana_options_kibana_cpus: 0.5
+kibana_options_kibana_mem: 1024
+
+### DC/OS Official configurations ### 
+
+# Install latest operating system updates
+os_system_updates: False
 
 # DC/OS cluster version
 dcos_version: '1.11.4'
@@ -49,35 +85,3 @@ dcos_ee_superuser_password_hash: "$6$rounds=656000$8CXbMqwuglDt3Yai$ZkLEj8zS.GmP
 # Note: Set rexray_config_method: file and edit ./roles/bootstrap/templates/rexray.yaml.j2 for a custom rexray configuration
 # options: empty, file
 dcos_ee_rexray_config_method: empty
-
-# Kafka
-kafka_version:  2.3.0-1.1.0
-kafka_options_brokers_count: 1
-kafka_options_brokers_cpus: 1
-kafka_options_brokers_mem: 512
-kafka_options_brokers_kafka_offsets: 1
-
-# Elastic
-elastic_version: 2.4.0-5.6.9
-elastic_options_master_nodes_cpus: 0.5
-elastic_options_master_nodes_mem: 512
-elastic_options_master_nodes_heap_size: 256
-elastic_options_data_nodes_count: 1
-elastic_options_data_nodes_cpus: 0.5
-elastic_options_data_nodes_mem: 512
-elastic_options_data_nodes_heap_size: 256
-elastic_options_coordinator_nodes_count: 1
-elastic_options_coordinator_nodes_cpus: 0.5
-elastic_options_coordinator_nodes_mem: 512
-elastic_options_coordinator_nodes_heap_size: 256
-
-# Logstash
-logstash_version: 2.3.4
-logstash_options_logstash_config_string: 'input { kafka { topic_id => "ResultOrderByDir" zk_connect => "master.mesos:2181/dcos-service-kafka" } } output { elasticsearch { hosts =>  "data.elastic.l4lb.thisdcos.directory:9200" index => "streaming_index_kibana"} }'
-logstash_options_logstash_instances: '1'
-
-# Kibana
-kibana_version: 2.4.0-5.6.9
-kibana_options_kibana_elasticsearch_url:  'http://coordinator.elastic.l4lb.thisdcos.directory:9200'
-kibana_options_kibana_cpus: 0.5
-kibana_options_kibana_mem: 1024
