Variabilize the configuration

--- a/ansible-dcos/group_vars/all.yaml
+++ b/ansible-dcos/group_vars/all.yaml
@@ -8,6 +8,10 @@ role_install_elastic: true
 role_install_kibana: true
 role_install_logstash: true
 
+# Flink
+jar_project_path: '~/Téléchargements/'
+jar_project_name: 'FinanceFlinkProject.jar'
+
 # Kafka
 kafka_version:  2.3.0-1.1.0
 kafka_options_brokers_count: 1
