--- a/ansible-dcos/roles/package/kubernetes/tasks/flink.yml
+++ b/ansible-dcos/roles/package/kubernetes/tasks/flink.yml
@@ -1,11 +1,20 @@
 ---
 # This playbook runs flink in a kubernetes cluster
 
+#- name: Remove jobmanager deployment in kubernetes
+#  command: "kubectl delete -f {{ role_path }}/tasks/flink/jobmanager-deployment.yaml"
+
+#- name: Remove taskmanager deployment in kubernetes
+#  command: "kubectl delete -f {{ role_path }}/tasks/flink/taskmanager-deployment.yaml"
+
+#- name: Remove jobmanager service in kubernetes
+#  command: "kubectl delete -f {{ role_path }}/tasks/flink/jobmanager-service.yaml"
+
 - name: configure jobmanager deployment in kubernetes
-  command: "kubectl create -f /home/finaxys/auto_SAAS.try/ansible-dcos/roles/package/kubernetes/tasks/flink/jobmanager-deployment.yaml"
+  command: "kubectl create -f {{ role_path }}/tasks/flink/jobmanager-deployment.yaml"
 
 - name: configure taskmanager deployment in kubernetes
-  command: "kubectl create -f /home/finaxys/auto_SAAS.try/ansible-dcos/roles/package/kubernetes/tasks/flink/taskmanager-deployment.yaml"
+  command: "kubectl create -f {{ role_path }}/tasks/flink/taskmanager-deployment.yaml"
 
 - name: run jobmanager service in kubernetes
-  command: "kubectl create -f /home/finaxys/auto_SAAS.try/ansible-dcos/roles/package/kubernetes/tasks/flink/jobmanager-service.yaml"
+  command: "kubectl create -f {{ role_path }}/tasks/flink/jobmanager-service.yaml"
