--- a/ansible-dcos/plays/main.yml
+++ b/ansible-dcos/plays/main.yml
@@ -1,10 +1,10 @@
 ---
 
 - name: install kubernetes
-  include: kubernetes.yml
+  import_playbook: kubernetes.yml
 
 - name: install packages
-  include: packages.yml
+  import_playbook: packages.yml
 
 - name: run flink job
-  include: run-job.yml
+  import_playbook: run-job.yml
