--- a/ansible-dcos/roles/package/flink-job/tasks/main.yml
+++ b/ansible-dcos/roles/package/flink-job/tasks/main.yml
@@ -2,9 +2,8 @@
 # This playbook runs flink job  in a kubernetes cluster
 
 - name: copy jar file to the container
-  command: bash -c 'kubectl cp ~/StreamingAsAService/streaming-platform/stream-layer2/target/FinanceFlinkProject-0.1.jar default/$(kubectl get pods --all-namespaces -owide | grep jobmanager | tr -s " " | cut -d" "  -f2):/tmp'
-
+  command: bash -c 'kubectl cp {{ jar_project_path }}{{jar_project_name}} default/$(kubectl get pods --all-namespaces -owide | grep jobmanager | tr -s " " | cut -d" "  -f2):/tmp'
 
 - name: run flink job
-  command: bash -c 'kubectl exec -it $(kubectl get pods --all-namespaces -owide | grep jobmanager | tr -s " " | cut -d" " -f2) flink run /tmp/FinanceFlinkProject-0.1.jar &'
+  command: bash -c 'kubectl exec -it $(kubectl get pods --all-namespaces -owide | grep jobmanager | tr -s " " | cut -d" " -f2) flink run /tmp/{{ jar_project_name }} &'
 
